# FetoFlow

./: .buildinfo  .gitignore  .pylintrc  FetoFlow.html  README.md  bc_utils.html  file_parsing_utils.html  genindex.html  geometry_utils.html  helper_functions.html  index.html  matrix_builder.html  pressure_flow_utils.html  pyproject.toml  requirements.txt  resistance_utils.html  search.html  searchindex.js  setup.py  solve_utils.html
.github/workflows/: docs.yml
_sources/: bc_utils.rst.txt  index.rst.txt  resistance_utils.rst.txt
documentation/: capillary_model.rst  conf.py  geometry_utils.rst  helper_functions.rst  index.rst  pressure_flow_utils.rst
documentation/_build/doctrees/: FetoFlow.doctree  bc_utils.doctree  environment.pickle  file_parsing_utils.doctree  geometry_utils.doctree  helper_functions.doctree  index.doctree  matrix_builder.doctree  pressure_flow_utils.doctree  resistance_utils.doctree  solve_utils.doctree
documentation/_build/html/: .buildinfo  .buildinfo.bak  FetoFlow.html  bc_utils.html  file_parsing_utils.html  genindex.html  geometry_utils.html  helper_functions.html  index.html  matrix_builder.html  objects.inv  pressure_flow_utils.html  py-modindex.html  resistance_utils.html  search.html  searchindex.js  solve_utils.html
documentation/_build/html/.doctrees/: bc_utils.doctree  environment.pickle  file_parsing_utils.doctree  geometry_utils.doctree  helper_functions.doctree  index.doctree  matrix_builder.doctree  pressure_flow_utils.doctree  resistance_utils.doctree  (+1 more)
examples/: Demo.ipynb  full_functionality_example.py  pressure_and_flows_example.py
output_data/: example_simulation_pressures.csv  nonlinear_pressure_values.csv  pressure_values.csv
src/FetoFlow/: matrix_builder.py  pressure_flow_utils.py  solve_utils.py  tools.py
src/fetoflow/: __init__.py  bc_utils.py  file_parsing_utils.py  helper_functions.py  matrix_builder.py  pressure_flow_utils.py  solve_utils.py
tests/: __init__.py  conftest.py  test_bc_utils.py  test_file_parsing_utils.py  test_geometry_utils.py  test_matrix_builder.py  test_resistance_utils.py
(+4 files in other folders)
