[build-system]
requires = ["setuptools>=61.0", "wheel"]
[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fetoflow"
version = "0.1.0"
description = "Network-based haemodynamic modelling utilities for fetoplacental circulation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "VirtualPregnancy" } ]
keywords = ["blood flow", "placenta", "network", "hemodynamics", "feto-placental"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/VirtualPregnancy/FetoFlow"
Source = "https://github.com/VirtualPregnancy/FetoFlow"

dependencies = [
  "numpy>=1.20",
  "scipy>=1.7",
  "pandas>=1.3",
  "networkx>=2.6",
  "matplotlib>=3.4",
  "seaborn>=0.11",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "mypy", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 150

[project.scripts]
lint = "fetoflow.tools:lint"
license = { text = "MIT" }
